# TwitterSA

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TwitterSA.py  __init__.py  pyproject.toml
.github/workflows/: ci.yml
TwitterSA/helpers/: CalculateEmotions.py  Preprocess.py
TwitterSA/workflows/: ci.yml
helpers/: CalculatePolarity.py  Comparison.py  GetData.py  PrintWordCloud.py  ReadWrite.py  SaveCSV.py
helpers/SentimentAnalysisModels/: Afinn.py  README.md  TextBlob.py  Vader.py
services/: .flake8
services/TwitterSA/: README.md  TwitterSA.py  requirements.txt
services/TwitterSA/helpers/: CalculateEmotions.py  CalculatePolarity.py  GetData.py  Preprocess.py  PrintWordCloud.py  SaveCSV.py
