[tool.poetry]
name = "twittersa"
version = "0.0.1"
description = "Twitter Sentiment Analysis"
authors = ["Soroush"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "1.5.3"
nrclex = "3.0.0"
wordcloud = "1.8.2.2"
matplotlib = "3.7.0"
snscrape = "0.5.0.20230113"
textblob = "0.17.1"
vadersentiment = "3.3.2"
afinn = "0.1"
nltk = "3.8.1"
pandas-stubs = "^1.5.3.230321"
setuptools = "^67.6.1"
regex = "^2023.3.23"
tqdm = "^4.65.0"
click = "^8.1.3"
colorama = "^0.4.6"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
mypy-extensions = "^1.0.0"
pytest = "^7.2.2"
typeguard = "^3.0.2"
black = "^23.3.0"
pytest-asyncio = "^0.21.0"
flake8 = "^6.0.0"
flake8-rst-docstrings = "^0.3.0"
flake8-docstrings = "^1.7.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.3.23"
isort = "^5.12.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.2.1"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
